logos section spacing fixed

--- a/styles/components/_news-logo.scss
+++ b/styles/components/_news-logo.scss
@@ -26,7 +26,7 @@
       width: fit-content;
         img {
             width: 180px;
-            margin: 10px;
+            margin: 10px 15px;
             
         }   
     }
