--- a/styles/media_queries/mobile-l.scss
+++ b/styles/media_queries/mobile-l.scss
@@ -95,5 +95,10 @@
         min-height: 490px;  
     }
 }
-
+/// news 
+.news-logo {
+    .marketwatch {
+        margin-inline-end: 20px;
+    }
+}
 }
