--- a/styles/media_queries/tablet.scss
+++ b/styles/media_queries/tablet.scss
@@ -80,6 +80,15 @@
     font-size: 3.6rem;
     margin: 50px auto 100px auto;
 }
+.nbc {
+    margin: 30px 0px 30px 10px;
+}
+.cbs {
+    //margin-block-start: 50px;
+    img {
+        margin: 30px 10px ;
+    }
+}
 }
 
 
