--- a/styles/styles.css
+++ b/styles/styles.css
@@ -713,7 +713,7 @@ footer .footer-logo h2 {
 }
 .news-logo .marketwatch img {
   width: 180px;
-  margin: 10px;
+  margin: 10px 15px;
 }
 .news-logo .abc {
   width: -webkit-fit-content;
